--- a/AlumniProject/AlumniProject/AlumniProject.csproj
+++ b/AlumniProject/AlumniProject/AlumniProject.csproj
@@ -202,6 +202,7 @@
     <Content Include="Acc\Login.aspx" />
     <Content Include="Acc\LogOut.aspx" />
     <Content Include="Acc\Register.aspx" />
+    <Content Include="BusinessObjects\test.txt" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
