--- a/AlumniProject/AlumniProject/bin/AlumniProject.dll.config
+++ b/AlumniProject/AlumniProject/bin/AlumniProject.dll.config
@@ -10,7 +10,8 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-AlumniProject-20171115085219.mdf;Initial Catalog=aspnet-AlumniProject-20171115085219;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="Alumnus" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=Alumnus Database;Data Source=219A-A-5-19"/>
+    <add name="Alumnus" connectionString="Integrated Security=SSPI;Persist Security Info=False;User ID=sa;Initial Catalog=AlumnusDatabase;Data Source=DESKTOP-C4PCVOB\SQLEXPRESS
+"/>
   </connectionStrings>
   <system.web>
     <authentication mode="None" />
